--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Rockxy01",
   "license": "ISC",
   "scripts": {
-    "build": "babel src -d lib",
-    "test": "jest"
+    "start": "yarn start",
+    
   }
 }
